Fix flags size to not overflow in travel/country/index.html

--- a/_includes/css/country.css
+++ b/_includes/css/country.css
@@ -3,7 +3,7 @@
 	width: 50%;
 	background-color: rgba(0,0,0,1);
 	min-height: 100vh;
-	padding-top: 5%;
+	padding-top: 60px;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -13,7 +13,7 @@
 	width: calc(50vw/5 - 10px);
 	height: calc(50vw/10 - 15px);
 	margin: 5px;
-	margin-top: 20px;
+	margin-top: 5px;
 }
 
 #posts-by-country {
